--- a/admin/cas/wapt/data_entry_student.html
+++ b/admin/cas/wapt/data_entry_student.html
@@ -51,7 +51,7 @@
         </select>
       </td>
       <td><label for="CLASS">Classification</label></td>
-      <td><input type="text" name="CF-[STUDENTS:~(rn).S_NC_WAPT_SHEET_WORK_ITEMS.S_NC_WAPT_SHEET_WORK_ITEMS:~[gpv:id;-1]]CLASS" value="" readonly="true" id="CLASS"></td>
+      <td><input type="text" id="classification" name="CF-[STUDENTS:~(rn).S_NC_WAPT_SHEET_WORK_ITEMS.S_NC_WAPT_SHEET_WORK_ITEMS:~[gpv:id;-1]]CLASS" value="" readonly="true"></td>
       <td></td>
       <td></td>
     </tr>
