--- a/admin/cas/wapt/json/classification.json.html
+++ b/admin/cas/wapt/json/classification.json.html
@@ -30,7 +30,7 @@ where stustatus.sdcid = ~[gpv:studcid]
 {
 "studcid" : "~(studcid;t)",
 "lep" : "~(lep;t)",
-"calcclass" : "~(calcclass;t)"
+"classification" : "~(calcclass;t)"
 }
 [/tlist_sql]
 {}
