--- a/admin/courses/new.html
+++ b/admin/courses/new.html
@@ -72,6 +72,7 @@ $j(document).ready(function() {
 $j('#someinput').keyup(function(){
 	var rxp = new RegExp($j('#someinput').val(), 'i');
 	var optlist = $j('#central_course_number').empty();
+	optlist.append($j('<option/>').attr('value', '').text('Select'));
 	opts.each(function(){
 		if (rxp.test(this[1])) {
 			optlist.append($j('<option/>').attr('value', this[0]).text(this[1]));
@@ -98,16 +99,16 @@ $j('#someinput').keyup(function(){
 <div class="box-round">
 <table border="0" cellspacing="0" cellpadding="4" width="100%" class="linkDescList">
 	<tr>
-		<td><label>Course Filter:</label></td>
+		<td><label>Filter Course List Here:</label></td>
 		<td><input id="someinput"></td>
 	</tr>
         <tr>
-		<td><label>Select a course code</label></td>
+		<td><label>Select A State Course Code Here:</label></td>
 		<td><select name="coursecode" id="central_course_number" onchange="selectCourse()"><option value="">Select</option>
 			~[tlist_sql;
 			    SELECT c.course_number, c.course_name
 			    FROM courses@DBL_ENTCON c
-			    ORDER BY]<option value="~(course_number;t)">~(course_number;t) / ~(course_name;t)</option>[/tlist_sql]
+			    ORDER BY c.course_number, c.course_name]<option value="~(course_number;t)">~(course_number;t) / ~(course_name;t)</option>[/tlist_sql]
 		    </select>
 		    <p id="missingCourseNumber" class="error-message" style="display: none">Missing required field</p>
 		</td>
@@ -273,7 +274,7 @@ function selectCourse() {
     $j('#course_suffix').focus();
 };
 function constructCourse() {
-    var coursePrefix = $j('#course_number').val();
+    var coursePrefix = $j('#central_course_number').val();
     var courseSuffix = $j('#course_suffix').val();
     $j('#full_course_number').val(coursePrefix + courseSuffix);
 };
