Fixes for Medicine and Menu for CECAS

--- a/admin/medicine_log/medicine_entry.html
+++ b/admin/medicine_log/medicine_entry.html
@@ -14,7 +14,7 @@
 
 <h1>Medication Instructions</h1>
 <form action="/admin/medicine_log/medicine_entry.html" method="POST">
-<div class="box-round group">
+<div class="box-round">
 	<h2 class="toggle expanded">Filter</h2>
 	<div>
 			<fieldset class="inline">
@@ -35,7 +35,7 @@
 					</select>
 				</div>			
 			</fieldset>
-		<div class="row-button" style="clear:both;">
+		<div class="button-row">
 		<input type="hidden" name="tbl" value="~[gpv:tbl]">
 		<button type="submit" id="btnFilter" name="btnFilter" >Filter</button>
 		</div>
