--- a/admin/medicine_log/medicine_log.html
+++ b/admin/medicine_log/medicine_log.html
@@ -14,7 +14,7 @@
 
 <h1>Medicine Log</h1>
 <form action="/admin/medicine_log/medicine_log.html" method="POST">
-<div class="box-round group">
+<div class="box-round">
 	<h2 class="toggle expanded">Filter</h2>
 	<div>
 			<fieldset class="inline">
@@ -27,7 +27,7 @@
 					<input type="text" name="sd" value="~[if.~[gpv:sd]=]~(f.currentdate)[else]~[gpv:sd][/if]"> to <input type="text" name="ed" value="~[if.~[gpv:ed]=]~(f.currentdate)[else]~[gpv:ed][/if]">
 				</div>			
 			</fieldset>
-		<div class="row-button" style="clear:both;">
+		<div class="button-row">
 		<input type="hidden" name="tbl" value="~[gpv:tbl]">
 		<button type="submit" id="btnFilter" name="btnFilter" >Filter</button>
 		</div>
