--- a/admin/cas/reports/nc_reportcard/nc_reportcard.html
+++ b/admin/cas/reports/nc_reportcard/nc_reportcard.html
@@ -30,28 +30,34 @@
       teacherCommentTerm : "~[displayprefyearschool:nc_reportcard_commentterm]"
     };
   </script>
-    <script src="/scripts/requirejs/require.js"></script>
+    <script src="/scripts/cas/require.js"></script>
 <script type="text/javascript">
-/**
- * Need to configure require js before psbehaviors.
- */
+    //TEST
 require.config({
-    	baseUrl: ~[scripts_url],
-    	paths: {
-    		'jquery':                'cas/jquery.min',
-        'underscore':            'underscore/amd-underscore-'+~[if.jsdebug]'dev'[else]'min'[/if]+'-1.3.1',
-    		'backbone':              'backbone/amd-backbone-'+~[if.jsdebug]'dev'[else]'min'[/if]+'-0.9.1',
-    		'Handlebars':            'handlebars/require-handlebars.1.0.0.beta.4',
-    		'Handlebars/i18nprecompile': 'handlebars/hbs-i18nprecompile-0.2.1'    	}
-    });
+    baseUrl: ~[scripts_url],
+    paths: {
+        'jquery': 'cas/jquery.min',
+        'underscore': 'cas/underscore-min',
+        'backbone': 'cas/backbone-min',
+        'handlebars': 'cas/handlebars',
+        'json2': 'cas/json2',
+        'Templates':'/admin/cas/reports/nc_reportcard_test/js/cas_handlebars',
+        'Spinner':'/admin/cas/reports/nc_reportcard_test/js/spinner'
+
+    },
+    shim: {
+        "backbone": {
+            "deps": ["underscore", "jquery"],
+            "exports": "Backbone"
+
+        },
+        'handlebars': {exports: 'Handlebars'},
+        'json2': { exports: 'JSON' }
+    }
+});
 </script>
   ~[wc:CAS]
-  <script type="text/javascript" src="/scripts/cas/functions/cas_handlebars.js"></script>
-  <script src="/scripts/cas/jquery.min.js"></script>
-  <script src="/scripts/cas/underscore-min.js"></script>
-  <script src="/scripts/cas/json2.js"></script>
-  <script src="/scripts/cas/backbone-min.js"></script>
-  <script src="/scripts/cas/handlebars.js"></script>
+
   <!-- Grades Template -->
   <script id="grades-template" type="text/x-handlebars-template">
     <table class="rcgradetable">
